--- a/style.css
+++ b/style.css
@@ -1,13 +1,51 @@
+html {
+  box-sizing: border-box;
+}
+*,
+*:before,
+* :after {
+  box-sizing: inherit;
+}
+
 body {
-    background-color: #2C2141;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    min-height: 100vh;
+  background-color: #2c2141;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+  font-family: Arial, Helvetica, sans-serif;
 }
 .main {
-    background-color: #F8F8F8;
-    border-radius: 16px;
-    width: 624px;
-    margin: 16px;
+  background-color: #f8f8f8;
+  border-radius: 16px;
+  width: 624px;
+  margin: 16px;
+  padding: 32px;
+}
+
+.person {
+
+}
+
+.person__description{
+    font-size: 16px;
+    line-height: 22px;
+}
+.person__name{
+font-size: 36px;
+margin: 0;
+font-weight: normal;
+}
+
+.person__position{
+    color: #545454;
+    font-size: 18px;
+    font-style: italic;
+    margin: 0;
+
+}
+
+.special {
+    color: #ED6D05;
+    font-weight: normal;
 }
